--- a/Web site starter kit/index.html
+++ b/Web site starter kit/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+<!--
+
+	this is an website made with: easy website template from TheRareBlueFanta
+	http://lj3d.netlify.com/
+	http://lanije.netlify.com/
+	
+
+-->
+
 <html>
   <head>
     <meta charset="UTF-8">
@@ -30,10 +39,25 @@
   <body>
     <div class="centrer">
 		<h1>Welcome to my website</h1>		
-		<a href="http://twitch.tv/therarebluefanta/" class="button" target="_blank">Twitch</a><a href="https://www.youtube.com/channel/UC-G9twdinRrgPdz8B_KF4Og" class="buttonyt" target="_blank">YouTube</a><a href="https://www.instagram.com/therarebluefanta/" class="buttoninsta" target="_blank">Instagram</a>
+		<div class="buttonALL">
+			<a href="http://twitch.tv/therarebluefanta/" class="button" target="_blank">Twitch</a><a href="https://www.youtube.com/channel/UC-G9twdinRrgPdz8B_KF4Og" class="buttonyt" target="_blank">YouTube</a><a href="https://www.instagram.com/therarebluefanta/" class="buttoninsta" target="_blank">Instagram</a>
+		</div>
 	</div>
 	<div class="text-box">
-		<h1 class="title">Text here</h1>
+		<!--Put any thing you whant in here-->
+		<h1 class="title">hi this is an test head line</h1>
+		<p>this is also a test but this is an paragraf</p>
+		
+		<div class="padding">
+			<div class="dash">
+				<h1>----------------------------------</h1>
+			</div>
+			<h1 class="smal">this is an image</h1>
+			<div class="dash">
+				<h1>----------------------------------</h1>
+			</div>
+			<img src="Assets\images\test meme.jpg">
+		</div>
 	</div>
   </body>
 </html>
