Buttons and Navigation update 1.2.2
this adds new button options! all the buttons is a bit more compatible with mobile viewers!

--- a/Web site starter kit/index.html
+++ b/Web site starter kit/index.html
@@ -40,7 +40,12 @@
     <div class="centrer">
 		<h1>Welcome to my website</h1>		
 		<div class="buttonALL">
-			<a href="http://twitch.tv/therarebluefanta/" class="button" target="_blank">Twitch</a><a href="https://www.youtube.com/channel/UC-G9twdinRrgPdz8B_KF4Og" class="buttonyt" target="_blank">YouTube</a><a href="https://www.instagram.com/therarebluefanta/" class="buttoninsta" target="_blank">Instagram</a>
+			<ul>
+				<li><a href="http://twitch.tv/therarebluefanta/" class="button" target="_blank">Twitch</a></li>
+				<li><a href="https://www.youtube.com/channel/UC-G9twdinRrgPdz8B_KF4Og" class="buttonyt" target="_blank">YouTube</a></li>
+				<li><a href="https://www.instagram.com/therarebluefanta/" class="buttoninsta" target="_blank">Instagram</a></li>
+			</ul>
+			
 		</div>
 	</div>
 	<div class="text-box">
