--- a/Web site starter kit/index.html
+++ b/Web site starter kit/index.html
@@ -11,7 +11,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Website</title>
+    <title>TRBF</title>
   	<link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
   	<link rel="stylesheet" href="Assets\css\index.css" type="text/css">
@@ -39,7 +39,7 @@
   <body>
     <div class="centrer">
 		<h1>Welcome to my website</h1>		
-		<div class="buttonALL">
+		<div class="buttonALLsmall">
 			<ul>
 				<li><a href="http://twitch.tv/therarebluefanta/" class="button" target="_blank">Twitch</a></li>
 				<li><a href="https://www.youtube.com/channel/UC-G9twdinRrgPdz8B_KF4Og" class="buttonyt" target="_blank">YouTube</a></li>
@@ -50,18 +50,25 @@
 	</div>
 	<div class="text-box">
 		<!--Put any thing you whant in here-->
-		<h1 class="title">hi this is an test head line</h1>
-		<p>this is also a test but this is an paragraf</p>
+		
 		
 		<div class="padding">
 			<div class="dash">
 				<h1>----------------------------------</h1>
 			</div>
-			<h1 class="smal">this is an image</h1>
+			<h1 class="smal">here is some cat images</h1>
 			<div class="dash">
 				<h1>----------------------------------</h1>
 			</div>
-			<img src="Assets\images\test meme.jpg">
+			<img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.giphy.com%2Fmedia%2FUmO1IuCwW14k%2Fgiphy.gif&f=1">
+			<img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.giphy.com%2Fmedia%2FS4C8wEocAqy6k%2Fgiphy.gif&f=1">
+			<img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.giphy.com%2Fmedia%2FYYKYunpi2kSd2%2Fgiphy.gif&f=1">
+			<img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.giphy.com%2Fmedia%2F10RhccNxPSaglW%2Fgiphy.gif&f=1">
+			<p>This site is an example for what you can make with</p>
+			<h1>easy-website-template</h1>
+			<p>by therarebluefanta</p>
+			<p class="small">aka Lasse N, Jensen</p>
+			<a href="https://github.com/TheRareBlueFanta/Easy-Website-Template" class="buttonALL">click this to get all the files on GitHub </a>
 		</div>
 	</div>
   </body>
